vlib/v/checker/tests/static_method_not_found_err.out
vlib/v/checker/tests/static_method_not_found_err.vv:5:5: notice: unused parameter: `f`
    3 | }
    4 | 
    5 | fn (f TestStruct) static_method() string {
      |     ^
    6 |     return 'hello'
    7 | }
vlib/v/checker/tests/static_method_not_found_err.vv:10:9: error: unknown function: TestStruct.static_method
    8 | 
    9 | fn main() {
   10 |     val := TestStruct.static_method()
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~
   11 |     println(val)
   12 | }
vlib/v/checker/tests/static_method_not_found_err.vv:10:6: error: assignment mismatch: 1 variable but `TestStruct.static_method()` returns 0 values
    8 | 
    9 | fn main() {
   10 |     val := TestStruct.static_method()
      |         ~~
   11 |     println(val)
   12 | }
vlib/v/checker/tests/static_method_not_found_err.vv:11:2: error: `println` can not print void expressions
    9 | fn main() {
   10 |     val := TestStruct.static_method()
   11 |     println(val)
      |     ~~~~~~~~~~~~
   12 | }
