vlib/v/checker/tests/static_method_not_found_err.vv
struct TestStruct {
	name string
}

fn (f TestStruct) static_method() string {
	return 'hello'
}

fn main() {
	val := TestStruct.static_method()
	println(val)
}
